--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.58.4",
+    "@react-three/fiber": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-type-animation": "^2.1.2",
     "styled-components": "^5.3.9",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
